syntax = "proto3";

package admin.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
//import "google/protobuf/timestamp.proto";
//import "validate/validate.proto"; use buf first
option go_package = "github.com/fzf-labs/ai-boilerplate-backend/api/admin/v1;v1";

//系统-租户
service SysTenant {
  //系统-租户-创建一条数据
  rpc CreateSysTenant(CreateSysTenantReq) returns (CreateSysTenantReply) {
    option (google.api.http) = {
      post: "/admin/v1/sys_tenant/create"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //系统-租户-更新一条数据
  rpc UpdateSysTenant(UpdateSysTenantReq) returns (UpdateSysTenantReply) {
    option (google.api.http) = {
      post: "/admin/v1/sys_tenant/update"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //系统-租户-更新状态
  rpc UpdateSysTenantStatus(UpdateSysTenantStatusReq) returns (UpdateSysTenantStatusReply) {
    option (google.api.http) = {
      post: "/admin/v1/sys_tenant/update/status"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //系统-租户-删除一条数据
  rpc DeleteSysTenant(DeleteSysTenantReq) returns (DeleteSysTenantReply) {
    option (google.api.http) = {
      post: "/admin/v1/sys_tenant/delete"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //系统-租户-单条数据查询
  rpc GetSysTenantInfo(GetSysTenantInfoReq) returns (GetSysTenantInfoReply) {
    option (google.api.http) = {get: "/admin/v1/sys_tenant/info"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //系统-租户-列表数据查询
  rpc GetSysTenantList(GetSysTenantListReq) returns (GetSysTenantListReply) {
    option (google.api.http) = {get: "/admin/v1/sys_tenant/list"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
}
//系统-租户信息
message SysTenantInfo {
  string id = 1; // id
	string name = 2; // 名称
	string remark = 3; // 备注
	string adminId = 4; // 租户管理员Id
	string expireTime = 5; // 过期时间
	string menuIds = 6; // 菜单
	int32 status = 7; // 状态(-1禁用,1开启)
	string createdAt = 8; // 创建时间
	string updatedAt = 9; // 更新时间
}

//请求-系统-租户-创建一条数据
message CreateSysTenantReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["name","status"]
    }
  };
  string name = 1 [(buf.validate.field).string={min_len: 1, max_len: 50}]; // 名称
	string remark = 2 [(buf.validate.field).ignore=IGNORE_IF_UNPOPULATED,(buf.validate.field).string={min_len: 1, max_len: 200}]; // 备注
	string adminId = 3 [(buf.validate.field).ignore=IGNORE_IF_UNPOPULATED,(buf.validate.field).string={min_len: 1, max_len: 50}]; // 租户管理员Id
	string expireTime = 4 [(buf.validate.field).ignore=IGNORE_IF_UNPOPULATED,(buf.validate.field).string={min_len: 1, max_len: 64}]; // 过期时间
	string menuIds = 5 [(buf.validate.field).ignore=IGNORE_IF_UNPOPULATED,(buf.validate.field).string={min_len: 1}]; // 菜单
	int32 status = 6 ; // 状态(-1禁用,1开启)
}

//响应-系统-租户-创建一条数据
message CreateSysTenantReply {
  	string id = 1; // id
}

//请求-系统-租户-更新一条数据
message UpdateSysTenantReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id","name","status"]
    }
  };
  string id = 1 [(buf.validate.field).string={min_len: 1, max_len: 128}]; // id
	string name = 2 [(buf.validate.field).string={min_len: 1, max_len: 50}]; // 名称
	string remark = 3 [(buf.validate.field).ignore=IGNORE_IF_UNPOPULATED,(buf.validate.field).string={min_len: 1, max_len: 200}]; // 备注
	string adminId = 4 [(buf.validate.field).ignore=IGNORE_IF_UNPOPULATED,(buf.validate.field).string={min_len: 1, max_len: 50}]; // 租户管理员Id
	string expireTime = 5 [(buf.validate.field).ignore=IGNORE_IF_UNPOPULATED,(buf.validate.field).string={min_len: 1, max_len: 64}]; // 过期时间
	string menuIds = 6 [(buf.validate.field).ignore=IGNORE_IF_UNPOPULATED,(buf.validate.field).string={min_len: 1}]; // 菜单
	int32 status = 7 ; // 状态(-1禁用,1开启)
}

//响应-系统-租户-更新一条数据
message UpdateSysTenantReply {}

//请求-系统-租户-更新状态
message UpdateSysTenantStatusReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id","status"]
    }
  };
  string id = 1 [(buf.validate.field).string={min_len: 1, max_len: 128}]; // id
	int32 status = 2 ; // 状态(-1禁用,1开启)
}

//响应-系统-租户-更新状态
message UpdateSysTenantStatusReply {}

//请求-系统-租户-删除一条数据
message DeleteSysTenantReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id"]
    }
  };
  string id = 1 [(buf.validate.field).string={min_len: 1, max_len: 128}]; // id
}

//响应-系统-租户-删除一条数据
message DeleteSysTenantReply {}

//请求-系统-租户-单条数据查询
message GetSysTenantInfoReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id"]
    }
  };
  string id = 1 [(buf.validate.field).string={min_len: 1, max_len: 128}]; // id
}

//响应-系统-租户-单条数据查询
message GetSysTenantInfoReply {
  SysTenantInfo info = 1;
}

//请求-系统-租户-列表数据查询
message GetSysTenantListReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: [
        "page",
        "pageSize"
      ]
    }
  };
  int32 page = 1[(buf.validate.field).int32={gte: 1}]; //页码
  int32 pageSize = 2[(buf.validate.field).int32={gte: 1, lte: 1000}]; //页数
}

//响应-系统-租户-列表数据查询
message GetSysTenantListReply {
  int32 total = 1; //总数
  repeated SysTenantInfo list = 2; // 列表数据
}

